tests/neg/apply-insert.stk
def main =
  val a = "hello, world"
  a.substring(4)          // error
